Revert to original one-jar packaging for now